--- a/tours.html
+++ b/tours.html
@@ -16,27 +16,20 @@
   </head>
   <body>
     <div class="app">
-      <nav>
+      <nav class="nav-black">
         <a href="#" class="logo"></a>
         <div class="links">
-          <a class="active" href="index.html">home</a>
+          <a href="index.html">home</a>
           <a href="about.html">about</a>
-          <a href="tours.html">tours</a>
+          <a class="active" href="tours.html">tours</a>
           <a href="">special offers</a>
           <a href="">blog</a>
           <a href="">contact</a>
         </div>
       </nav>
-      <div class="home">
-        <div class="hero">
-          <div class="callout">
-            <h1>TRAVEL-FLY</h1>
-            <h4>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat
-              aliquid minus nemo sed est.
-            </h4>
-            <a href="#">READ MORE</a>
-          </div>
+      <div class="wrapper">
+        <div class="tours-hero">
+          <h1>TOURS:</h1>
         </div>
         <div class="travel-cards">
           <div class="card isreal">
@@ -60,53 +53,49 @@
               <a href="#">LEARN MORE</a>
             </div>
           </div>
+          <div class="card isreal">
+            <div class="details">
+              <h1>ISRAEL</h1>
+              <h2>FROM $1000</h2>
+              <a href="#">LEARN MORE</a>
+            </div>
+          </div>
+          <div class="card usa">
+            <div class="details">
+              <h1>U.S.A</h1>
+              <h2>FROM $1500</h2>
+              <a href="#">LEARN MORE</a>
+            </div>
+          </div>
+          <div class="card austrailia">
+            <div class="details">
+              <h1>AUSTRAILIA</h1>
+              <h2>FROM $1800</h2>
+              <a href="#">LEARN MORE</a>
+            </div>
+          </div>
+          <div class="card isreal">
+            <div class="details">
+              <h1>ISRAEL</h1>
+              <h2>FROM $1000</h2>
+              <a href="#">LEARN MORE</a>
+            </div>
+          </div>
+          <div class="card usa">
+            <div class="details">
+              <h1>U.S.A</h1>
+              <h2>FROM $1500</h2>
+              <a href="#">LEARN MORE</a>
+            </div>
+          </div>
+          <div class="card austrailia">
+            <div class="details">
+              <h1>AUSTRAILIA</h1>
+              <h2>FROM $1800</h2>
+              <a href="#">LEARN MORE</a>
+            </div>
+          </div>
         </div>
-
-        <form action="">
-          <h1>Booking Form</h1>
-          <div class="senderInfo">
-            <input type="text" name="name" placeholder="name..." />
-            <input type="text" name="email" placeholder="email..." />
-            <input type="text" name="country" placeholder="country..." />
-            <input type="text" name="hotel" placeholder="hotel..." />
-          </div>
-          <div class="check-in-out-details">
-            <div>
-              <label for="check-in">Check-in</label>
-              <input type="date" name="check-in" /><i
-                class="fa-regular fa-calendar"></i>
-            </div>
-            <div>
-              <label for="check-out">Check-out</label>
-              <input type="date" name="check-out" /><i
-                class="fa-regular fa-calendar"></i>
-            </div>
-          </div>
-          <div class="room-details">
-            <div class="flex-label-with-input">
-              <div>
-                <label for="adults">Adults</label>
-                <input type="number" name="adults" />
-              </div>
-              <div>
-                <label for="chilren">Children</label>
-                <input type="number" name="adults" />
-              </div>
-              <div>
-                <label for="rooms">Rooms</label>
-                <input type="number" name="rooms" />
-              </div>
-            </div>
-          </div>
-
-          <textarea
-            type="textarea"
-            name="message"
-            class="messageBox"
-            placeholder="message..."></textarea>
-
-          <button>SUBMIT</button>
-        </form>
       </div>
       <footer>
         <div class="wrapper">
