little fixes with tour cards & page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="travel-cards">
           <div class="card isreal">
             <div class="details">
-              <h1>ISRAEL</h1>
+              <h1>Israel</h1>
               <h2>FROM $1000</h2>
               <a href="#">LEARN MORE</a>
             </div>
@@ -53,9 +53,9 @@
               <a href="#">LEARN MORE</a>
             </div>
           </div>
-          <div class="card austrailia">
+          <div class="card australia">
             <div class="details">
-              <h1>AUSTRAILIA</h1>
+              <h1>Australia</h1>
               <h2>FROM $1800</h2>
               <a href="#">LEARN MORE</a>
             </div>
