--- a/tours.html
+++ b/tours.html
@@ -34,7 +34,7 @@
         <div class="travel-cards">
           <div class="card isreal">
             <div class="details">
-              <h1>ISRAEL</h1>
+              <h1>Israel</h1>
               <h2>FROM $1000</h2>
               <a href="#">LEARN MORE</a>
             </div>
@@ -48,50 +48,50 @@
           </div>
           <div class="card austrailia">
             <div class="details">
-              <h1>AUSTRAILIA</h1>
+              <h1>Australia</h1>
               <h2>FROM $1800</h2>
               <a href="#">LEARN MORE</a>
             </div>
           </div>
-          <div class="card isreal">
+          <div class="card newzealand">
             <div class="details">
-              <h1>ISRAEL</h1>
-              <h2>FROM $1000</h2>
+              <h1>New Zealand</h1>
+              <h2>FROM $1200</h2>
               <a href="#">LEARN MORE</a>
             </div>
           </div>
-          <div class="card usa">
+          <div class="card france">
             <div class="details">
-              <h1>U.S.A</h1>
-              <h2>FROM $1500</h2>
+              <h1>France</h1>
+              <h2>FROM $2500</h2>
               <a href="#">LEARN MORE</a>
             </div>
           </div>
-          <div class="card austrailia">
+          <div class="card egypt">
             <div class="details">
-              <h1>AUSTRAILIA</h1>
-              <h2>FROM $1800</h2>
+              <h1>Egypt</h1>
+              <h2>FROM $900</h2>
               <a href="#">LEARN MORE</a>
             </div>
           </div>
-          <div class="card isreal">
+          <div class="card japan">
             <div class="details">
-              <h1>ISRAEL</h1>
-              <h2>FROM $1000</h2>
+              <h1>Japan</h1>
+              <h2>FROM $1300</h2>
               <a href="#">LEARN MORE</a>
             </div>
           </div>
-          <div class="card usa">
+          <div class="card canada">
             <div class="details">
-              <h1>U.S.A</h1>
-              <h2>FROM $1500</h2>
+              <h1>Canada</h1>
+              <h2>FROM $2000</h2>
               <a href="#">LEARN MORE</a>
             </div>
           </div>
-          <div class="card austrailia">
+          <div class="card uae">
             <div class="details">
-              <h1>AUSTRAILIA</h1>
-              <h2>FROM $1800</h2>
+              <h1>U.A.E</h1>
+              <h2>FROM $3000</h2>
               <a href="#">LEARN MORE</a>
             </div>
           </div>
