Tour pages finished!

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="links">
           <a class="active" href="index.html">home</a>
           <a href="about.html">about</a>
-          <a href="tours.html">tours</a>
+          <a href="tours/">tours</a>
           <a href="">special offers</a>
           <a href="">blog</a>
           <a href="">contact</a>
@@ -38,7 +38,7 @@
             <a href="#">READ MORE</a>
           </div>
         </div>
-        <div class="travel-cards">
+        <div class="travel-cards wrapper">
           <div class="card isreal">
             <div class="details">
               <h1>Israel</h1>
