--- a/about.html
+++ b/about.html
@@ -21,57 +21,60 @@
         <div class="links">
           <a href="index.html">home</a>
           <a class="active" href="about.html">about</a>
-          <a href="tours.html">tours</a>
+          <a href="tours/">tours</a>
           <a href="">special offers</a>
           <a href="">blog</a>
           <a href="">contact</a>
         </div>
       </nav>
-      <div class="about">
-        <h1>About:</h1>
-        <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae
-          ab illo inventore veritatis et quasi architecto beatae vitae dicta
-          sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-          aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-          qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-          dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-          quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-          aliquam quaerat voluptatem.
-        </p>
-        <div class="clientQuotes">
-          <h2>CLIENT QUOTES:</h2>
-          <div class="client-quote-box">
-            <div class="client-img"></div>
-            <div class="client-info">
-              <div class="client-description">
-                <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                  accusantium doloremque laudantium, totam rem aperiam, eaque
-                  ipsa quae ab illo inventore veritatis et quasi architecto
-                  beatae vitae dicta sunt explicabo.
-                </p>
+      <div class="wrapper">
+        <div class="about">
+          <h1>About:</h1>
+          <p>
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+            accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+            quae ab illo inventore veritatis et quasi architecto beatae vitae
+            dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+            aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+            eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+            qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
+            sed quia non numquam eius modi tempora incidunt ut labore et dolore
+            magnam aliquam quaerat voluptatem.
+          </p>
+          <div class="clientQuotes">
+            <h2>CLIENT QUOTES:</h2>
+            <div class="client-quote-box">
+              <div class="client-img"></div>
+              <div class="client-info">
+                <div class="client-description">
+                  <p>
+                    Sed ut perspiciatis unde omnis iste natus error sit
+                    voluptatem accusantium doloremque laudantium, totam rem
+                    aperiam, eaque ipsa quae ab illo inventore veritatis et
+                    quasi architecto beatae vitae dicta sunt explicabo.
+                  </p>
+                </div>
+                <div class="client-name">- Miranda Brown</div>
               </div>
-              <div class="client-name">- Miranda Brown</div>
             </div>
-          </div>
-          <div class="client-quote-box">
-            <div class="client-img alt-client"></div>
-            <div class="client-info">
-              <div class="client-description">
-                <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                  accusantium doloremque laudantium, totam rem aperiam, eaque
-                  ipsa quae ab illo inventore veritatis et quasi architecto
-                  beatae vitae dicta sunt explicabo.
-                </p>
+            <div class="client-quote-box">
+              <div class="client-img alt-client"></div>
+              <div class="client-info">
+                <div class="client-description">
+                  <p>
+                    Sed ut perspiciatis unde omnis iste natus error sit
+                    voluptatem accusantium doloremque laudantium, totam rem
+                    aperiam, eaque ipsa quae ab illo inventore veritatis et
+                    quasi architecto beatae vitae dicta sunt explicabo.
+                  </p>
+                </div>
+                <div class="client-name">- Johnathan wes</div>
               </div>
-              <div class="client-name">- Johnathan wes</div>
             </div>
           </div>
         </div>
       </div>
+
       <footer>
         <div class="wrapper">
           <a href="#" class="logo"></a>
