--- a/tours/index.html
+++ b/tours/index.html
@@ -12,16 +12,16 @@
       integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <div class="app">
       <nav class="nav-black">
         <a href="#" class="logo"></a>
         <div class="links">
-          <a href="index.html">home</a>
-          <a href="about.html">about</a>
-          <a class="active" href="tours.html">tours</a>
+          <a href="/index.html">home</a>
+          <a href="/about.html">about</a>
+          <a class="active" href="index.html">tours</a>
           <a href="">special offers</a>
           <a href="">blog</a>
           <a href="">contact</a>
@@ -36,63 +36,63 @@
             <div class="details">
               <h1>Israel</h1>
               <h2>FROM $1000</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="israel.html">LEARN MORE</a>
             </div>
           </div>
           <div class="card usa">
             <div class="details">
               <h1>U.S.A</h1>
               <h2>FROM $1500</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="usa.html">LEARN MORE</a>
             </div>
           </div>
           <div class="card austrailia">
             <div class="details">
               <h1>Australia</h1>
               <h2>FROM $1800</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="australia.html">LEARN MORE</a>
             </div>
           </div>
           <div class="card newzealand">
             <div class="details">
               <h1>New Zealand</h1>
               <h2>FROM $1200</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="newzealand.html">LEARN MORE</a>
             </div>
           </div>
           <div class="card france">
             <div class="details">
               <h1>France</h1>
               <h2>FROM $2500</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="france.html">LEARN MORE</a>
             </div>
           </div>
           <div class="card egypt">
             <div class="details">
               <h1>Egypt</h1>
               <h2>FROM $900</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="egypt.html">LEARN MORE</a>
             </div>
           </div>
           <div class="card japan">
             <div class="details">
               <h1>Japan</h1>
               <h2>FROM $1300</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="japan.html">LEARN MORE</a>
             </div>
           </div>
           <div class="card canada">
             <div class="details">
               <h1>Canada</h1>
               <h2>FROM $2000</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="canada.html">LEARN MORE</a>
             </div>
           </div>
           <div class="card uae">
             <div class="details">
               <h1>U.A.E</h1>
               <h2>FROM $3000</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="uae.html">LEARN MORE</a>
             </div>
           </div>
         </div>
