--- a/tours/uae.html
+++ b/tours/uae.html
@@ -12,15 +12,15 @@
       integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <div class="app">
       <nav class="nav-black">
         <a href="#" class="logo"></a>
         <div class="links">
-          <a href="/index.html">home</a>
-          <a href="/about.html">about</a>
+          <a href="../index.html">home</a>
+          <a href="../about.html">about</a>
           <a class="active" href="index.html">tours</a>
           <a href="">special offers</a>
           <a href="">blog</a>
