Links on homepage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat
               aliquid minus nemo sed est.
             </h4>
-            <a href="#">READ MORE</a>
+            <a href="about.html">READ MORE</a>
           </div>
         </div>
         <div class="travel-cards wrapper">
@@ -43,21 +43,21 @@
             <div class="details">
               <h1>Israel</h1>
               <h2>FROM $1000</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="tours/israel.html">LEARN MORE</a>
             </div>
           </div>
           <div class="card usa">
             <div class="details">
               <h1>U.S.A</h1>
               <h2>FROM $1500</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="tours/usa.html">LEARN MORE</a>
             </div>
           </div>
           <div class="card australia">
             <div class="details">
               <h1>Australia</h1>
               <h2>FROM $1800</h2>
-              <a href="#">LEARN MORE</a>
+              <a href="tours/australia.html">LEARN MORE</a>
             </div>
           </div>
         </div>
